docs: simplify Java flags, improve requiredSparkConfig docs